--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "moment": "^2.29.4",
         "normalize.css": "^8.0.1",
         "primer-tooltips": "^2.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "splitpanes": "^2.4.1",
         "vddl": "^0.7.1",
         "vue": "^2.6.14",
@@ -25,6 +27,7 @@
         "vuex": "^3.6.2"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.22.5",
         "@wordpress/hooks": "^3.4.1",
         "async": "^2.6.4",
         "babel-plugin-component": "^1.1.1",
