Add fuse search library

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "clipboard": "^2.0.11",
         "element-theme-chalk": "^2.15.9",
         "element-ui": "^2.15.9",
+        "fuse.js": "^6.6.2",
         "jquery-datetimepicker": "^2.5.21",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
